<resources>
    <string name="app_name">Atom</string>
    <string name="atom_heading">A T O M</string>
    <string name="welcome">"Welcome"</string>
    <string name="exclamation">!</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="title_activity_reader">"Reader "</string>

    <string name="example_connection_status">Placeholder</string>
    <string name="device_status_label">Your device is: </string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connected">Connected</string>
    <string name="status_label">status:</string>
    <string name="state_attempting_connection">Status: Attempting to connect…</string>
    <string name="state_failed_to_connect">Failed to connect!</string>

    <string name="example_welcome_heading">Hi there, User!</string>
    <string name="dialog_heading">Select your book\'s name:</string>
    <string name="no_records_heading">You have no recorded history</string>
    <string name="progress_heading">Your Progress:</string>
    <string name="no_records_subheading">Please begin reading using Atom to get personalized statistics and analytics</string>
    <string name="error_heading">Error!</string>
    <string name="progressive_attention_chart_heading">Progressive attention scores:</string>
    <string name="no_session_selected_heading">Select a session from the list below to display information about it</string>
    <string name="no_sessions_available_heading">You have no current reading sessions</string>
    <string name="session_selected_heading">Your selected session:</string>
    <string name="reading_sessions_heading">Reading sessions:</string>
    <string name="no_internet_heading">No internet connection!</string>

    <string name="no_internet_subheading">Please connect to the internet to fetch your analytics</string>
    <string name="registration_subheading">Registration:</string>
    <string name="recover_password_subheading">Recover password:</string>
    <string name="account_subheading">Your Account:</string>
    <string name="book_subheading">Your books:</string>
    <string name="connection_subheading">Headset connection:</string>
    <string name="cumulative_chart_subheading">This graph represents all the sessions over time and the percentage time you were attentive throughout</string>
    <string name="attention_time_subheading">Your attention throughout the session:</string>
    <string name="select_session_subheading">Scroll and select a session to display the attention-time graph</string>


    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="books_label">Books and Reads</string>
    <string name="games_label">Games and Activities</string>
    <string name="score_label">Score:</string>
    <string name="time_label">Time:</string>
    <string name="on_label">On:</string>
    <string name="at_label">At:</string>
    <string name="book_label">Book:</string>
    <string name="preferred_reading_period_label">Preferred reading period:</string>
    <string name="last_read_book_label">Last read book:</string>
    <string name="last_read_time_label">Last read total session time:</string>
    <string name="most_read_time_label">Most read time of the day:</string>
    <string name="most_read_book_label">Most read book:</string>
    <string name="attention_label">Attention</string>
    <string name="session_time_label">Session time:</string>
    <string name="book_name_label">Book name:</string>
    <string name="session_score_label">Session score:</string>
    <string name="time_seconds_label">Time (seconds)</string>
    <string name="session_over_time_label">Sessions over time</string>
    <string name="attribute_missing_label">Please read some more to find out about this attribute</string>
    <string name="graph_missing_label">Please read some more to get this graph</string>


    <string name="sample_session_no">Session 1:</string>
    <string name="sample_float_value">13.2424</string>
    <string name="sample_time_value">00:10:42</string>
    <string name="sample_date">Mon 16 Dec 19</string>
    <string name="sample_timestamp">08:30 p.m.</string>
    <string name="sample_shortened_book_name">(Anarchist P…</string>
    <string name="sample_time_interval">08:00 a.m. – 10:00 a.m.</string>
    <string name="sample_book_name">(Anarchist Pamphlets) Daniel Guérin, Mary Klopper, Noam Chomsky - Anarchism From Theory To Practice -Monthly Review Press (1970)</string>
    <string name="sample_time">01:01:24</string>

    <string name="action_register">Register</string>
    <string name="action_forgot_password">Forgot your password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_create_account">Sign up</string>
    <string name="action_recover_password">Recover password</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_change_password">Change password</string>
    <string name="action_view_feed">View Feed</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_keep_filename_as_bookname">Keep Filename as Book name</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="button_account">Manage account</string>
    <string name="button_progress">View progress</string>
    <string name="button_headset">Headset connection</string>
    <string name="button_answer">Answer</string>
    <string name="button_next">Next</string>
    <string name="button_end">End</string>

    <string name="prompt_question">Answer the question:</string>
    <string name="prompt_email">Enter your email</string>
    <string name="prompt_password">Enter your password</string>
    <string name="prompt_confirm_password">Confirm your password</string>
    <string name="prompt_password_recover">Enter your email to recover your password</string>
    <string name="prompt_name">Enter your full name</string>

    <string name="response_incorrect">Sorry, that was incorrect.</string>
    <string name="response_correct">Great, that was correct!</string>

    <string name="atom_image_description">Human with Atom image</string>
    <string name="back_button_description">back button</string>
    <string name="splash_image_description">Splash screen image</string>
    <string name="part_of_day_description">Part of day icon</string>

    <string name="password_length_error">Password should contain more than 8 characters</string>
    <string name="password_missing_error">Please enter a password!</string>
    <string name="invalid_email_error">Email is not valid!</string>
    <string name="email_missing_error">Please enter an email address!</string>
    <string name="authentication_failed_error">Email or password incorrect!</string>
    <string name="invalid_name_error">Name cannot contain any special characters!</string>
    <string name="fullname_missing_error">Please enter your full name!</string>
    <string name="passwords_mismatch_error">Passwords do not match!</string>
    <string name="confirm_missing_error">Please confirm your password!</string>
    <string name="email_used_error">Please try another email!</string>
    <string name="unknown_email_error">Email does not exist!</string>
    <string name="google_sign_in_error">Could not login using Google, Sorry!</string>
    <string name="email_verification_error">Verify your email first!</string>
    <string name="no_internet_error">Please connect to the internet.</string>
    <string name="fetch_data_error">Sorry. There was an error while fetching the data</string>

    <string name="facebook_app_id">1590643554421325</string>
    <string name="fb_login_protocol_scheme">fb1590643554421325</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="daily_reading_distribution_heading">Daily reading distribution:</string>
    <string name="time_format">hh:mm:ss</string>

    <string-array name="questions">
    <item name="page1_questions">
#Name>Which of the following names have been mentioned up till now?>Joe:Freddy:Al>3
#Name>Which of the following names have been mentioned up till now?>Alex:Kevin:Derek>2
#Name>Which of the following names have been mentioned up till now?>Ana:Micheal:Roger>1
#Name>Which of the following names have been mentioned up till now?>Roger:Bob:Ali>2
#Action>What was Al going to do?>Take Mum and Bob on Sunday:Watch a movie:Sing a song>1
</item>
    <item name="page2_questions">
#Action>What were Al and Kevin doing?>Singing and dancing:Running and shouting:Walking and talking>3
#Phrase>What did Al\'s Mum say?>"Human genesis":"Weed Psychosis":"Cell Necrosis">2
#Name?What was the weed called?>\'Father\':\'Root\':\'Mothership\'>3
</item>
    <item name="page3_questions">
#Phrase>What did Al and Kevin hear?>\'Croickee\':\'Bloody Hell\':\'Oh my god!\'>2
#Action>What was Al\'s Dad doing?>He was kneeling:He was sitting:He was standing>1
#Place>What was the lawn said to be like?>Big, round and red:Big, square and red:Small, square and green>3
#Place>What was the lawn said to be covered with?>Trees:Weeds:Bushes>2
#Place>What was the lawn said to look like?>The Eiffel Tower:The Pyramids of Giza:The Colosseum>2
</item>
    <item name="page4_questions">
#Question>What did Kevin ask?>\'Can\'t you hit the lawn mower?\':\'Can\'t you drive the car?\':\'Can\'t you use the weed-killer?\'>3
#Name>Which of the following names have been mentioned up till now?>Mr. Roger:Mr. P:Mr. Josh>2
#Action>What did Ana and Al do?>Went to the pub:Went to the mall:Went to the library>1
#Action>What did Ana do?>Ana made a drink:Ana delivered a report:Ana threw a pencil>2
#Name>Which of the following names have been mentioned up till now?>Stephanie:Beatriz:Alexander>3
</item>
    <item name="page5_questions">
#Action>What did Al and Ana do?>They sang a song:They drank a soft drink:They tried their pitch>3
#Weather>What did the weather turn into?>A cold snow:A summer storm:A hot breeze>2
#Time>When did Al wake up?>Mid-morning:Morning:Mid-day>1
</item>
    <item name="page6_questions">
#Action>What did Al do?>Opened the window:Closed the blind:Opened the door>1
#Action>What was Al\'s Dad doing?>Sitting on a chair:Standing in the room:Sitting on the sofa>1
#Place>What was the lawn like?>Tropical desert:Tropical rainforest:Tropical jungle>2
#Action>What did Ana do?>She went outside for her mail:She went downstairs for her shawl:She went upstairs for her phone>3
</item>
    <item name="page7_questions">
#Action>What did Kevin\'s Pal do?>Took his jacket off and cocked his fist:Took his headphones off and shook his head:Took his cap off and stomped his feet>2#Name>Which of the following people were mentioned?>A teacher:A librarian:A professor>3
#Action>What did the professor do?>Laughed happily:Smiled approvingly:Cried sadly>2
</item>
    <item name="page8_questions">
#Food>Which food item was mentioned?>Eggs:Bread:Pizza>3
</item>
    <item name="page9_questions">
#Place>What was the lawn covered with?>Water:Dust:Snow>3
    </item>
    </string-array>

    <array name="parts_of_day">
        <item>@drawable/ic_time_sunrise</item>
        <item>@drawable/ic_time_day</item>
        <item>@drawable/ic_time_sunset</item>
        <item>@drawable/ic_time_night</item>
    </array>
</resources>
