<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorSecondary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondaryDark">

        <TextView
            android:id="@+id/main_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/example_welcome_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/main_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_account"
        android:padding="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="openAccount" />

    <Button
        android:id="@+id/main_progress_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openProgress"
        android:padding="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_progress" />

    <Button
        android:id="@+id/main_headset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openConnection"
        android:padding="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_headset" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/main_headset_image"
            android:layout_width="18dp"
            android:layout_height="31dp"
            android:alpha="0.8"
            android:tint="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_headset" />

        <TextView
            android:id="@+id/main_headset_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/status_label"
            app:layout_constraintBottom_toBottomOf="@+id/main_headset_image"
            app:layout_constraintStart_toEndOf="@+id/main_headset_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_headset_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/example_connection_status"
            android:textColor="@color/success"
            app:layout_constraintBottom_toBottomOf="@+id/main_headset_image"
            app:layout_constraintStart_toEndOf="@+id/main_headset_status_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.545" />

        <ImageButton
            android:id="@+id/main_books"
            style="@style/button_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openBooks"
            android:src="@drawable/ic_book"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_headset_status_label" />

        <ImageButton
            android:id="@+id/main_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_books_label"
            style="@style/button_circular" />

        <TextView
            android:id="@+id/main_books_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/books_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_books" />

        <TextView
            android:id="@+id/main_games_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/games_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_games" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>