<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/backDark"
    android:layout_margin="1dp"
    android:padding="20dp"
    tools:context=".QuestionActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/backLight"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/prompt_question"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/backLight"
        android:layout_margin="5dp" />

    <RadioGroup
        android:id="@+id/question_choices_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textColor="@color/backLight"
        android:layout_margin="20dp">
    </RadioGroup>

    <TextView
        android:id="@+id/question_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/question_btn_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:onClick="check_answer"
            android:padding="20dp"
            android:text="@string/button_answer" />
        <Button
            android:id="@+id/question_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:onClick="proceed"
            android:padding="20dp"
            android:text="@string/button_next" />
    </LinearLayout>
</LinearLayout>